--- a/src/food-list.html
+++ b/src/food-list.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
+    <title>Food-list</title>
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+      <h1>Welcome to page Food-list</h1>
+      <form class="task-form">
+        <input type="text" name="taskName" />
+        <button type="submit">Add task</button>
+      </form>
+
+      <ul class="task-list"></ul>
     </section>
+
+    <script src="./js/food-list.js" type="module"></script>
   </body>
 </html>
